add hibernate